--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,53 @@
+# requirements.txt - Fixed for protobuf compatibility
+
+# Core Streamlit and Web Framework
 streamlit>=1.28.0
+streamlit-option-menu>=0.3.6
+
+# AI and ML Libraries  
 openai>=1.3.0
+# ChromaDB with specific protobuf version
 chromadb>=0.4.15
+protobuf==3.20.3
+grpcio>=1.56.0
+
+# OR Alternative - use FAISS instead of ChromaDB
+# faiss-cpu>=1.7.4
+# hnswlib>=0.7.0
+
+# Data Processing
 pandas>=2.0.0
 numpy>=1.24.0
+pypdf>=3.17.0
+python-docx>=0.8.11
+pytesseract>=0.3.10
+Pillow>=10.0.0
+
+# Web Scraping and URLs
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+youtube-transcript-api>=0.6.1
+
+# Visualization
 plotly>=5.17.0
 networkx>=3.1
 graphviz>=0.20.1
+matplotlib>=3.7.0
+
+# Utilities
 python-dotenv>=1.0.0
-Pillow>=10.0.0
-pytesseract>=0.3.10
-pypdf>=3.17.0
-python-docx>=0.8.11
-beautifulsoup4>=4.12.0
-requests>=2.31.0
-youtube-transcript-api>=0.6.1
 pydantic>=2.5.0
-dataclasses-json>=0.6.1
 tenacity>=8.2.0
+typing-extensions>=4.8.0
+
+# LangChain (optional, for original compatibility)
+langchain>=0.1.0
+langchain-community>=0.0.10
+langchain-core>=0.1.0
+langchain-text-splitters>=0.0.1
+
+# Development Tools (optional)
+pytest>=7.4.0
+black>=23.0.0
+flake8>=6.0.0
+mypy>=1.5.0
