--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,7 @@ streamlit-option-menu>=0.3.6
 
 # AI and ML Libraries  
 openai>=1.3.0
-# ChromaDB with specific protobuf version
-chromadb>=0.4.15
+faiss-cpu>=1.7.4
 protobuf==3.20.3
 grpcio>=1.56.0
 
